--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "vue-router": "^3.0.1"
   },
   "devDependencies": {
+    "acorn": "^6.1.1",
     "ajv": "^6.10.0",
     "ajv-keywords": "^3.4.0",
     "autoprefixer": "^7.1.2",
@@ -41,23 +42,23 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^2.1.1",
-    "eslint": "^4.15.0",
+    "eslint": "^5.16.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
-    "eslint-loader": "^1.7.1",
+    "eslint-loader": "^2.1.2",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.2.0",
     "eslint-plugin-promise": "^3.4.0",
     "eslint-plugin-standard": "^3.0.1",
-    "eslint-plugin-vue": "^4.0.0",
-    "extract-text-webpack-plugin": "^3.0.0",
+    "eslint-plugin-vue": "^5.2.2",
     "file-loader": "^1.1.4",
     "friendly-errors-webpack-plugin": "^1.6.1",
-    "html-webpack-plugin": "^2.30.1",
+    "html-webpack-plugin": "^3.2.0",
     "jest": "^24.8.0",
     "jest-serializer-vue": "^0.3.0",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "mini-css-extract-plugin": "^0.6.0",
     "nightwatch": "^1.1.9",
     "node-notifier": "^5.1.2",
     "optimize-css-assets-webpack-plugin": "^5.0.1",
@@ -76,12 +77,14 @@
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^1.1.2",
     "vue-jest": "^1.0.2",
-    "vue-loader": "^13.3.0",
-    "vue-style-loader": "^3.1.2",
+    "vue-loader": "^15.7.0",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.5.2",
-    "webpack": "^3.12.0",
+    "webpack": "^4.32.0",
     "webpack-bundle-analyzer": "^3.3.2",
-    "webpack-dev-server": "^2.9.1",
+    "webpack-cli": "^3.3.2",
+    "webpack-dev-middleware": "^3.7.0",
+    "webpack-dev-server": "^3.4.1",
     "webpack-merge": "^4.1.0"
   },
   "engines": {
