--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ script:
 after_success:
   - git init
   - git config user.name "Travis-CI"
-  - git config user.email "agenricwon@gmail.com"
+  - git config user.email "AgenricWon@gmail.com"
   - git add .
   - git commit -m "Refresh by Travis CI."
   - git push "https://${GITHUB_TOKEN}@${GITHUB_REF}" master:master --force
